--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: #9dcff3;
+    background: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,7 +27,7 @@ body {
 }
 .logo {
     font-size: 25px;
-    color: aliceblue;
+    color: #ffffff;
     text-decoration: none;
     font-weight: 600;
 
@@ -51,11 +51,151 @@ body {
 }
 .home {
     height: 100vh;
+    background: url();
     display: flex;
     align-items: center;
+    padding: 0 10%;
 
 }
 .home-content {
-    background: #23fe29;
-    max-width: 600px;
+    max-width: 700px;
+}
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
+
+
+}
+.home-content h3 {
+    color: #9dcff3;
+    font-size: 28px;
+}
+.home-content p{
+    margin: 20px 0 40px;
+    font-size: 16px;
+}
+
+.home-content .btn-box{
+    display: flex;
+    justify-content: space-between;
+
+    width: 345px;
+    height: 50px;
+    
+}
+.btn-box a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #00abf0;
+    border: 2px solid #00abf0;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #081b29;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.btn-box a:hover{
+    color: #00abf0;
+}
+.btn-box a:nth-child(2){
+    background: transparent;
+    color: #00abf0;
+
+}
+
+.btn-box a:nth-child(2):hover{
+    color: #081b29;
+}
+
+.btn-box a:nth-child(2)::before{
+    background: #00abf0;
+}
+
+.btn-box a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: #081b29;
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-box a:hover::before{
+    width: 100%;
+}
+
+.home-sci{
+    position: absolute;
+    bottom: 40px;
+    width: 250px;
+    
+    display: flex;
+    justify-content: space-between;
+}
+.home-sci a{
+
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #00abf0;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #00abf0;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.home-sci a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background: #00abf0;
+    z-index: -1;
+    transition: .5s;
+}
+
+.home-sci a:hover::before{
+    width: 100%;
+}
+
+.home-sci a:nth-child(1):hover{
+    color: #081b29;
+}
+
+.home-sci a:nth-child(2):hover{
+    color: #081b29;
+}
+
+.home-sci a:nth-child(3):hover{
+    color: #081b29;
+}
+
+.home-sci a:nth-child(4):hover{
+    color: #081b29;
+}
+
+.home-sci a:nth-child(5):hover{
+    color: #081b29;
 }
