--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,18 @@ body {
 
 }
 .logo {
-    font-size: 25px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
     color: #ffffff;
     text-decoration: none;
     font-weight: 600;
 
+}
+img {
+    width: 48px;
+    height: 48px;
+    padding-right: 5px;
 }
 
 .navbar a{
