--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,21 @@ img {
 .home-sci a:nth-child(4):hover{
     color: #081b29;
 }
+.img-container {
+    width: 600px;
+    height: 600px;
+    overflow: hidden;
+    padding: 10px;
+}
+.img-container > img{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    transition: 
+        scale 750ms ease-out,
+        filter 250ms ease-in-out;
+}
+.img-container:hover > img{
+    scale: 1.15;
+    filter: grayscale(0);
+}
