--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,55 +203,4 @@ img {
     color: #081b29;
 }
 
-.work__container{
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    text-align: initial;
-}
-
-.work__container {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
-}
-
-.work__container {
-    row-gap: 2rem;
-}
-.work__img {
-    box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-    border-radius: 0.5rem;
-    overflow: hidden;
-}
-.work__img img{
-    transition: 1s;
-}
-
-.work__img img:hover {
-    transform: scale(1.1);
-}
-
-
-.img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 600px;
-    height: 600px;
-    overflow: hidden;
-    padding: 10px;
-}
-.img-container > img{
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-    filter: grayscale(1);
-    transition: 
-        scale 750ms ease-out,
-        filter 250ms ease-in-out;
-}
-.img-container:hover > img{
-    scale: 1.15;
-    filter: grayscale(0);
-}
+/* SECTION Projetos  */
