--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* Ajuste a opacidade conforme necessário */
+    z-index: 0;
+}
+header, .home {
+    position: relative;
+    z-index: 1; /* Garante que o conteúdo fique acima da sobreposição */
+}
+
+
+body {
+    background-color: black;
+    font-family: Arial, sans-serif;
+    overflow: hidden; /* Para evitar scroll indesejado */
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Coloca o canvas no fundo */
 }
 
 body {
