--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
+:root {
+    --primary-color: #5F07BF;
+    --primaryB-color: #3D037D;
+    --primaryW-color: #843ED0;
+    --secondary-color: #0B07D0;
+    --secondary-colorB: #040377;
+    --secondary-colorW: #4442ca;
+    --red-color: #FF0000;
+    --green-color: #38F299;
+}
 
 * {
     margin: 0;
@@ -15,7 +24,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Ajuste a opacidade conforme necessário */
+    background-color: rgba(0, 0, 0, 0.6); /* Ajuste a opacidade conforme necessário */
     z-index: 0;
 }
 header, .home {
@@ -23,7 +32,11 @@ header, .home {
     z-index: 1; /* Garante que o conteúdo fique acima da sobreposição */
 }
 
-
+.projects {
+    position: relative;
+    z-index: 1;
+    
+}
 body {
     background-color: black;
     font-family: Arial, sans-serif;
@@ -64,6 +77,12 @@ body {
     font-weight: 600;
 
 }
+.header a{
+    justify-content: center;
+    align-items: center;
+
+    color: var(--red-color);
+}
 img {
     width: 48px;
     height: 48px;
@@ -72,18 +91,18 @@ img {
 
 .navbar a{
     font-size: 18px;
-    color: antiquewhite;
+    color: white;
     text-decoration: none;
     font-weight: 500;
     margin-left: 35px;
     transition: .3s;
 }
 .navbar a:hover {
-    color: #9dcff3;
+    color: var(--green-color);
 
 }
 .navbar a :active{
-    color: #9dcff3;
+    color: var(--green-color);
 
 }
 .home {
@@ -128,8 +147,8 @@ img {
     align-items: center;
     width: 150px;
     height: 100%;
-    background: #00abf0;
-    border: 2px solid #00abf0;
+    background: var(--primary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 8px;
     font-size: 18px;
     color: #081b29;
@@ -142,20 +161,20 @@ img {
 }
 
 .btn-box a:hover{
-    color: #00abf0;
+    color: var(--primary-color);
 }
 .btn-box a:nth-child(2){
     background: transparent;
-    color: #00abf0;
+    color: var(--primary-color);
 
 }
 
 .btn-box a:nth-child(2):hover{
-    color: #081b29;
+    color: var(--primaryB-color);
 }
 
 .btn-box a:nth-child(2)::before{
-    background: #00abf0;
+    background: var(--primary-color);
 }
 
 .btn-box a::before{
@@ -165,7 +184,7 @@ img {
     left: 0;
     width: 0%;
     height: 100%;
-    background: #081b29;
+    background: var(--primaryB-color);
     z-index: -1;
     transition: .5s;
 }
@@ -191,10 +210,10 @@ img {
     width: 40px;
     height: 40px;
     background: transparent;
-    border: 2px solid #00abf0;
+    border: 2px solid var(--primary-color);
     border-radius: 50%;
     font-size: 20px;
-    color: #00abf0;
+    color: var(--primary-color);
     text-decoration: none;
     z-index: 1;
     overflow: hidden;
@@ -208,7 +227,7 @@ img {
     left: 0;
     width: 0%;
     height: 100%;
-    background: #00abf0;
+    background: var(--primary-color);
     z-index: -1;
     transition: .5s;
 }
@@ -218,19 +237,19 @@ img {
 }
 
 .home-sci a:nth-child(1):hover{
-    color: #081b29;
+    color: var(--primaryB-color);
 }
 
 .home-sci a:nth-child(2):hover{
-    color: #081b29;
+    color: var(--primaryB-color);
 }
 
 .home-sci a:nth-child(3):hover{
-    color: #081b29;
+    color: var(--primaryB-color);
 }
 
 .home-sci a:nth-child(4):hover{
-    color: #081b29;
+    color: var(--primaryB-color);
 }
 
 /* SECTION Projetos  */
