--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ canvas {
 body {
     background: #081b29;
     color: #ffffff;
-
+    overflow: auto;
 }
 .header {
     position: fixed;
@@ -249,11 +249,14 @@ img {
 
 /* SECTION Projetos  */
 .projects {
-    position: relative;
-    z-index: 1;
-    height: 100vh;
-    display: flex;
+    
+    z-index: 2;
     align-items: center;
     padding: 0 10%;
-
+    justify-content: center;
+    border: 1px solid red;
+}
+.projects h2 {
+    padding-top: 10px;
+    
 }
