--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,11 @@
 
 :root {
     --primary-color: #5F07BF;
-    --primaryB-color: #3D037D;
-    --primaryW-color: #843ED0;
+    --primaryB-color: #3C0479;
+    --primaryW-color: #8438D7;
     --secondary-color: #0B07D0;
-    --secondary-colorB: #040377;
-    --secondary-colorW: #4442ca;
+    --secondary-colorB: #03008A;
+    --secondary-colorW: #403DD3;
     --red-color: #FF0000;
     --green-color: #38F299;
 }
@@ -24,13 +24,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Ajuste a opacidade conforme necessário */
+    background-color: rgba(0, 0, 0, 0.3); /* Ajuste a opacidade conforme necessário */
     z-index: 0;
 }
-header, .home {
+header, .home, .s-about, .projects {
     position: relative;
     z-index: 1; /* Garante que o conteúdo fique acima da sobreposição */
 }
+
 
 body {
     background-color: black;
@@ -56,7 +57,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.8); /* Fundo preto com 80% de opacidade */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -247,6 +248,104 @@ img {
     color: var(--primaryB-color);
 }
 
+/* Mouse Scrol*/
+.mouse {
+    width: 25px;
+    height: 40px;
+    border: 2px solid #eee;
+    border-radius: 60px;
+    overflow: hidden;
+    position: absolute; /* Posiciona o ícone em relação à section home */
+    bottom: 20px; /* Alinha o ícone 20px acima do fundo da section home */
+    left: 50%; /* Centraliza horizontalmente */
+
+}
+
+.mouse::before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    top: 7px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #eee;
+    border-radius: 50%;
+    opacity: 1;
+    animation: wheel 1.3s infinite;
+    -webkit-animation: wheel 1.3s infinite
+}
+
+/* SECTION ABOUT */
+
+/* SECTION ABOUT */
+
+.s-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Altura da seção */
+    padding: 20px;
+    background-color: transparent; /* Remove o fundo da seção */
+    z-index: 3;
+}
+
+.about-container {
+    background-color: #151515; /* Cor de fundo do retângulo */
+    border-radius: 10px;
+    border: 1px solid #1F1F1F;
+    padding: 40px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1); /* Sombra para o retângulo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.about-content {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.about-content img {
+    max-width: 500px; /* Tamanho máximo da imagem */
+    max-height: 500px;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover; /* Mantém a proporção da imagem */
+}
+
+.about-text {
+    max-width: 600px;
+}
+
+.about-text h4 {
+    font-size: 18px;
+    color: var(--primary-color);
+}
+
+.about-text h2 {
+    font-size: 32px;
+    margin: 10px 0;
+    color: white;
+}
+
+.about-text h3 {
+    font-size: 24px;
+    color: white;
+    margin-bottom: 15px;
+}
+
+.about-text p {
+    font-size: 16px;
+    color: gray;
+    line-height: 1.6;
+}
+
+
 /* SECTION Projetos  */
 .projects {
     
@@ -254,9 +353,15 @@ img {
     align-items: center;
     padding: 0 10%;
     justify-content: center;
-    border: 1px solid red;
 }
 .projects h2 {
     padding-top: 10px;
     
+}
+
+@keyframes wheel {
+    to {
+        opacity: 0;
+        top: 27px
+    }
 }
