--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,39 @@ img {
         top: 27px
     }
 }
+
+
+/* FOOTER */
+footer {
+    width: 100%;
+    height: auto;
+    background-color: #151515;
+    color: #fff;
+    padding: 24px 0px
+}
+
+footer .grid-layout {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%
+}
+
+footer p {
+    font-size: 1.8rem
+}
+
+footer p a {
+    font-weight: 500;
+    color: #986dff
+}
+
+footer img {
+    width: 32px
+}
+
+footer div {
+    display: flex;
+    align-items: center;
+    gap: 16px
+}
