--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     background-color: rgba(0, 0, 0, 0.3); /* Ajuste a opacidade conforme necessário */
     z-index: 0;
 }
-header, .home, .s-about, .projects {
+header, .home, .s-about, .projects, .s-experience, .s-projects, .s-services, .s-contact ,.footer {
     position: relative;
     z-index: 1; /* Garante que o conteúdo fique acima da sobreposição */
 }
@@ -120,7 +120,7 @@ img {
 
 }
 .home-content h3 {
-    color: #9dcff3;
+    color: var(--primaryW-color);
     font-size: 28px;
 }
 .home-content p{
@@ -276,7 +276,6 @@ img {
     -webkit-animation: wheel 1.3s infinite
 }
 
-/* SECTION ABOUT */
 
 /* SECTION ABOUT */
 
@@ -344,6 +343,9 @@ img {
     color: gray;
     line-height: 1.6;
 }
+.about-text .about-p2 {
+    padding-top: 2px;
+}
 
 
 /* SECTION Projetos  */
@@ -365,15 +367,311 @@ img {
         top: 27px
     }
 }
+
 /* Experience */
 .s-experience {
+    padding: 5% 20px;
     background-color: #151515;
-    color: #fff;
-    padding: 96px 48px;
+    color: white;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.section-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.experience-grid {
+    display: flex;
+    gap: 20px;
+}
+
+.company-list {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: black;
+}
+
+.company {
+    padding: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.company:hover {
+    color: var(--primary-color);
+    border-left: solid 4px var(--primary-color);
+}
+
+.experience-details {
+    flex: 2;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
+}
+.text-experience div{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+
+.titleExperience {
+    
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.dateExperience {
+    font-size: 14px;
+    color: #777;
+    margin-bottom: 15px;
+}
+
+.companyExperience {
+    color: var(--primaryW-color);
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.changeExperience {
+    font-size: 14px;
+    color: white;
+    line-height: 1.6;
+}
+/* PROJECTS */
+.s-projects {
+    padding: 60px 10%;
+    text-align: center;
+}
+
+.s-projects h2 {
+    font-size: 24px;
+    margin-bottom: 40px;
+    color: #333;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.project-card {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.project-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.project-card h3 {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.project-card p {
+    font-size: 14px;
+    color: #777;
+    margin-bottom: 15px;
+}
+
+.tags {
+    margin-bottom: 15px;
+}
+
+.tags span {
+    display: inline-block;
+    background-color: #e0e0e0;
+    color: #555;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
+.btn-live-demo {
+    display: inline-block;
+    background-color: #5F07BF;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.btn-live-demo:hover {
+    background-color: #3C0479;
+}
+/* Services */
+.s-services {
+    padding: 60px 10%;
+    text-align: center;
+    background-color: #f9f9f9;
+}
+
+.s-services h2 {
+    font-size: 24px;
+    margin-bottom: 40px;
+    color: #333;
+}
+
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.service-card {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.service-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.service-card .icon {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+}
+
+.service-card .icon img {
+    width: 100%;
+    height: auto;
+}
+
+.service-card h3 {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.service-card p {
+    font-size: 14px;
+    color: #777;
+    line-height: 1.6;
+}
+/*Contact*/
+.s-contact {
+    padding: 60px 10%;
+    background: linear-gradient(135deg, #5F07BF, #8438D7);
+    color: #fff;
+    text-align: center;
+}
+
+.contact-container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.s-contact h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.s-contact p {
+    font-size: 16px;
+    margin-bottom: 40px;
+}
+
+.contact-form {
+    background: #fff;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    color: #333;
+    text-align: left;
+}
+
+.form-group {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    background: transparent;
+    color: #333;
+    font-size: 16px;
+}
+
+.form-group label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    background: #fff;
+    padding: 0 5px;
+    color: #999;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.form-group input:focus + label,
+.form-group input:not(:placeholder-shown) + label,
+.form-group textarea:focus + label,
+.form-group textarea:not(:placeholder-shown) + label {
+    top: -10px;
+    left: 10px;
+    color: #5F07BF;
+    font-size: 14px;
+    background: #fff;
+}
+
+.btn-submit {
+    background: #5F07BF;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.3s ease;
+}
+
+.btn-submit:hover {
+    background: #8438D7;
+}
+
+@media (max-width: 768px) {
+    .contact-form {
+        padding: 30px;
+    }
+}
+
 
 /* FOOTER */
 footer {
+    
     background-color: #151515; /* Fundo escuro */
     color: #ffffff; /* Texto branco */
     padding: 25px 15%; /* Espaçamento interno */
