--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,7 @@ img {
 }
 /*Contact*/
 .s-contact {
-    background: linear-gradient(to right, rgba(75, 3, 153, 0.8), rgba(86, 5, 172, 0.8)),url(/assets/svg/common-bg.svg);
+    background: linear-gradient(to right, rgba(75, 3, 153, 0.8), rgba(86, 5, 172, 0.8)),url(../assets/svg/common-bg.svg);
     background-size: cover;
     background-position: center;
     padding: 60px 10%;
