--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,26 @@
     --gray-color: #151515;
 }
 
+::-webkit-scrollbar {
+    width: 8px
+}
+
+::-webkit-scrollbar-track {
+    background-color: #111
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 8px
+}
 
 * {
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 .overlay {
@@ -120,6 +134,21 @@ img {
     height: 100vh; /* Garante que a seção ocupe a altura total da tela */
 
 }
+.home-logo {
+    position: absolute;
+    right: -10%;
+    top: 60%;
+    transform: translateY(-70%);
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.3;
+}
+
+.home-logo img {
+    width: 600px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+    color: #0B07D0;
+}
+
 .home-content {
     max-width: 700px;
     flex: 1;
@@ -130,33 +159,35 @@ img {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.2;
-
-
+    padding-bottom: 1%;
 }
 .home-content h3 {
     color: var(--primaryW-color);
     font-size: 28px;
+    padding-bottom: 1%;
 }
 .home-content p{
+    color: rgb(190, 190, 190);
     margin: 20px 0 40px;
-    font-size: 16px;
+    font-size: 20px;
+    padding-bottom: 1%;
 }
 
-.home-content .btn-box{
+.btn-box {
     display: flex;
-    justify-content: space-between;
-
-    width: 345px;
-    height: 50px;
-    
+    justify-content: flex-start; /* Alinha os botões à esquerda */
+    flex-wrap: wrap; /* Permite que os botões se movam para a linha seguinte se necessário */
+    gap: 15px; /* Espaçamento entre os botões */
+    width: 100%; /* Faz com que o contêiner ocupe toda a largura disponível */
+    max-width: 500px; /* Limita a largura máxima do contêiner se necessário */
+    height: auto; /* Ajusta a altura do contêiner com base no conteúdo */
+    margin: 0; /* Remove margens adicionais, se necessário */
 }
+
 .btn-box a {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
+    display: inline-flex; /* Faz com que o botão ajuste seu tamanho ao conteúdo */
     align-items: center;
-    width: 150px;
-    height: 100%;
+    padding: 10px 20px; /* Adiciona espaçamento interno ao botão */
     background: var(--primary-color);
     border: 2px solid var(--primary-color);
     border-radius: 8px;
@@ -168,6 +199,9 @@ img {
     z-index: 1;
     overflow: hidden;
     transition: .5s;
+    white-space: nowrap; /* Impede a quebra de linha do texto */
+    text-align: center; /* Alinha o texto no centro do botão */
+    box-sizing: border-box; /* Inclui a borda e o padding no cálculo da largura e altura */
 }
 
 .btn-box a:hover{
@@ -347,6 +381,7 @@ img {
 }
 
 .about-text h3 {
+    font-weight: 400;
     font-size: 24px;
     color: white;
     margin-bottom: 15px;
@@ -357,11 +392,42 @@ img {
     color: gray;
     line-height: 1.6;
 }
-.about-text .about-p2 {
-    padding-top: 2px;
+
+.social-buttons {
+    padding-top: 2%;
+    display: flex;
+    width: auto;
+    gap: 4%;
 }
 
+.social-btn {
+    display: inline-block;
+    width: 50px; /* Largura dos botões */
+    height: 50px; /* Altura dos botões */
+    margin: 5px;
+    border-radius: 10px; /* Arredondar os cantos */
+    color: #fff;
+    text-decoration: none;
+    font-size: 24px; /* Tamanho do ícone */
+    text-align: center;
+    line-height: 50px; /* Alinhamento vertical do ícone */
+    transition: background-color 0.3s, transform 0.3s;
+}
 
+.social-btn i {
+    vertical-align: middle; /* Alinhamento vertical do ícone */
+}
+
+.social-btn.linkedin { background-color: #0077b5; }
+.social-btn.instagram { background-color: #e4405f; }
+.social-btn.discord { background-color: #7289da; }
+.social-btn.github { background-color: #333; }
+.social-btn.behance { background-color: #1769ff; }
+
+.social-btn:hover {
+    transform: scale(1.1); /* Efeito de ampliação ao passar o mouse */
+    background-color: #333; /* Cor de fundo escura para hover, ajuste conforme preferido */
+}
 /* SECTION Projetos  */
 .projects {
     
