--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,11 @@ img {
     transition: .3s;
 }
 .navbar a:hover {
-    color: var(--green-color);
+    color: var(--primary-color);
 
 }
 .navbar a :active{
-    color: var(--green-color);
+    color: var(--primary-color);
 
 }
 .home {
@@ -184,52 +184,44 @@ img {
     display: flex;
     gap: 20px;
 }
-
-button {
-    --color: var(--primary-color);
-    font-family: inherit;
+.btn {
     display: inline-block;
-    padding: 10px 20px;
-    position: relative;
+    padding: 0.9rem 1.8rem;
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--primary-color); /* Texto roxo inicial */
+    border: 3px solid var(--primary-color); /* Borda roxa */
+    border-radius: 12px;
     cursor: pointer;
+    position: relative;
+    background-color: transparent; /* Fundo transparente */
+    text-decoration: none;
     overflow: hidden;
-    border: 2px solid var(--color);
-    transition: color 0.5s;
     z-index: 1;
-    font-size: 17px;
-    border-radius: 6px;
-    font-weight: 500;
-    color: var(--color);
-    background-color: transparent;
+    font-family: inherit;
+    transition: color 0.3s ease; /* Transição suave do texto */
 }
 
-button:before {
+.btn::before {
     content: "";
     position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color); /* Fundo roxo no hover */
+    transform: translateY(-100%); /* Inicia fora do botão */
+    transition: all 0.3s ease; /* Transição suave */
     z-index: -1;
-    background: var(--color);
-    height: 150px;
-    width: 200px;
-    border-radius: 50%;
-    top: 100%;
-    left: 100%;
-    transition: all 0.7s;
 }
 
-button:hover {
-    color: #fff;
+.btn:hover::before {
+    transform: translateY(0); /* Preenche de esquerda para direita */
 }
 
-button:hover:before {
-    top: -30px;
-    left: -30px;
+.btn:hover {
+    color: white; /* Muda a cor do texto para branco no hover */
 }
-
-button:active:before {
-    background: #3a0ca3;
-    transition: background 0s;
-}
-
 .home-sci{
     position: absolute;
     bottom: 40px;
@@ -603,6 +595,13 @@ button:active:before {
 .tags .span-game{
     border: 1px solid #ff0202;
 }
+.tags .span-ui{
+    border: 1px solid var(--primary-color);
+}
+.tags .span-figma{
+    border: 1px solid orangered;
+}
+
 .buttons {
     display: flex;
     gap: 4%;
@@ -745,7 +744,17 @@ button:active:before {
     color: #333;
     font-size: 16px;
 }
-
+.input-style {
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #555;
+    outline: none;
+}
+.input-style:focus {
+    border-color: var(--primary-color);
+}
 .form-group label {
     position: absolute;
     top: 50%;
